--- a/VAE_Cartoon_Refatorado.ipynb
+++ b/VAE_Cartoon_Refatorado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from IPython import display\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.manifold import TSNE\n",
-    "import cv2  # só se for usar"
+    "import cv2"
    ]
   },
   {
