--- a/VAE_Cartoon_Refatorado.ipynb
+++ b/VAE_Cartoon_Refatorado.ipynb
@@ -145,41 +145,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encoder(input_encoder):\n",
-    "    \n",
-    "    \n",
     "    inputs = keras.Input(shape=input_encoder, name='input_layer')\n",
-    "    \n",
     "    # Block-1\n",
-    "    x = layers.Conv2D(32, kernel_size=3, strides= 2, padding='same', name='conv_1')(inputs)\n",
+    "    x = layers.Conv2D(32, kernel_size=3, strides= 2, \n",
+    "                      padding='same', name='conv_1')(inputs)\n",
     "    x = layers.BatchNormalization(name='bn_1')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_1')(x)\n",
-    "  \n",
     "    # Block-2\n",
-    "    x = layers.Conv2D(64, kernel_size=3, strides= 2, padding='same', name='conv_2')(x)\n",
+    "    x = layers.Conv2D(64, kernel_size=3, strides= 2, \n",
+    "                      padding='same', name='conv_2')(x)\n",
     "    x = layers.BatchNormalization(name='bn_2')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_2')(x)\n",
-    "   \n",
     "    # Block-3\n",
-    "    x = layers.Conv2D(64, 3, 2, padding='same', name='conv_3')(x)\n",
+    "    x = layers.Conv2D(64, 3, 2, padding='same', \n",
+    "                      name='conv_3')(x)\n",
     "    x = layers.BatchNormalization(name='bn_3')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_3')(x)\n",
-    "   \n",
     "    # Block-4\n",
-    "    x = layers.Conv2D(64, 3, 2, padding='same', name='conv_4')(x)\n",
+    "    x = layers.Conv2D(64, 3, 2, padding='same', \n",
+    "                      name='conv_4')(x)\n",
     "    x = layers.BatchNormalization(name='bn_4')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_4')(x)\n",
-    "  \n",
     "    # Block-5\n",
-    "    x = layers.Conv2D(64, 3, 2, padding='same', name='conv_5')(x)\n",
+    "    x = layers.Conv2D(64, 3, 2, padding='same', \n",
+    "                      name='conv_5')(x)\n",
     "    x = layers.BatchNormalization(name='bn_5')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_5')(x)\n",
-    " \n",
-    "\n",
     "    # Final Block\n",
     "    flatten = layers.Flatten()(x)\n",
     "    mean = layers.Dense(200, name='mean')(flatten)\n",
@@ -281,12 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sampling(input_1,input_2):\n",
-    "    #input1 = layers.Lambda(sampling_model, name='encoder_output')([mean, log_var])\n",
     "    mean = keras.Input(shape=input_1, name='input_layer1')\n",
     "    log_var = keras.Input(shape=input_2, name='input_layer2')\n",
     "    out = layers.Lambda(sampling_model, name='encoder_output')([mean, log_var])\n",
@@ -314,39 +309,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def decoder(input_decoder):\n",
-    "    \n",
     "    inputs = keras.Input(shape=input_decoder, name='input_layer')\n",
     "    x = layers.Dense(4096, name='dense_1')(inputs)\n",
     "    x = layers.Reshape((8,8,64), name='Reshape')(x)\n",
-    "    \n",
     "    # Block-1\n",
-    "    x = layers.Conv2DTranspose(64, 3, strides= 2, padding='same',name='conv_transpose_1')(x)\n",
+    "    x = layers.Conv2DTranspose(64, 3, strides= 2, padding='same',\n",
+    "                                name='conv_transpose_1')(x)\n",
     "    x = layers.BatchNormalization(name='bn_1')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_1')(x)\n",
-    "   \n",
     "    # Block-2\n",
-    "    x = layers.Conv2DTranspose(64, 3, strides= 2, padding='same', name='conv_transpose_2')(x)\n",
+    "    x = layers.Conv2DTranspose(64, 3, strides= 2, padding='same',\n",
+    "                                name='conv_transpose_2')(x)\n",
     "    x = layers.BatchNormalization(name='bn_2')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_2')(x)\n",
-    " \n",
     "    # Block-3\n",
-    "    x = layers.Conv2DTranspose(64, 3, 2, padding='same', name='conv_transpose_3')(x)\n",
+    "    x = layers.Conv2DTranspose(64, 3, 2, padding='same', \n",
+    "                               name='conv_transpose_3')(x)\n",
     "    x = layers.BatchNormalization(name='bn_3')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_3')(x)\n",
-    "   \n",
     "    # Block-4\n",
-    "    x = layers.Conv2DTranspose(32, 3, 2, padding='same', name='conv_transpose_4')(x)\n",
+    "    x = layers.Conv2DTranspose(32, 3, 2, padding='same',\n",
+    "                                name='conv_transpose_4')(x)\n",
     "    x = layers.BatchNormalization(name='bn_4')(x)\n",
     "    x = layers.LeakyReLU(name='lrelu_4')(x)\n",
-    "\n",
-    "  \n",
     "    # Block-5\n",
-    "    outputs = layers.Conv2DTranspose(3, 3, 2,padding='same', activation='sigmoid', name='conv_transpose_5')(x)\n",
+    "    outputs = layers.Conv2DTranspose(3, 3, 2,padding='same', activation='sigmoid', \n",
+    "                                     name='conv_transpose_5')(x)\n",
     "    model = tf.keras.Model(inputs, outputs, name=\"Decoder\")\n",
     "    return model"
    ]
@@ -476,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,21 +477,16 @@
     "# This annotation causes the function to be \"compiled\".\n",
     "@tf.function\n",
     "def train_step(images):\n",
-    "\n",
     "    with tf.GradientTape() as encoder, tf.GradientTape() as decoder:\n",
-    "      \n",
     "        mean, log_var = enc(images, training=True)\n",
     "        latent = final([mean, log_var])\n",
     "        generated_images = dec(latent, training=True)\n",
-    "        loss_vec = vae_loss(images, generated_images, mean, log_var)  # (B,)\n",
-    "        loss = tf.reduce_mean(loss_vec)\n",
-    "        \n",
+    "        loss_vec = vae_loss(images, generated_images, mean, log_var) \n",
+    "        loss = tf.reduce_mean(loss_vec) \n",
     "    gradients_of_enc = encoder.gradient(loss, enc.trainable_variables)\n",
     "    gradients_of_dec = decoder.gradient(loss, dec.trainable_variables)\n",
-    "    \n",
     "    optimizer.apply_gradients(zip(gradients_of_enc, enc.trainable_variables))\n",
     "    optimizer.apply_gradients(zip(gradients_of_dec, dec.trainable_variables))\n",
-    "    \n",
     "    return loss"
    ]
   },
