--- a/VAE_Cartoon_Refatorado.ipynb
+++ b/VAE_Cartoon_Refatorado.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_height, img_width = 256, 256\n",
     "batch_size = 128\n",
-    "DATA_DIR = 'D:/UFU/cartoonset10k'"
+    "DATA_DIR = './cartoonset10k'"
    ]
   },
   {
@@ -444,11 +444,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.keras.optimizers.legacy.Adam(learning_rate=0.0005)"
+    "# optimizer = tf.keras.optimizers.legacy.Adam(learning_rate=0.0005)\n",
+    "encoder_optimizer = tf.keras.optimizers.legacy.Adam(learning_rate=0.0005)\n",
+    "decoder_optimizer = tf.keras.optimizers.legacy.Adam(learning_rate=0.0005)"
    ]
   },
   {
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,8 +554,8 @@
     "        # Save the model every 15 epochs\n",
     "        #if (epoch + 1) % 15 == 0:\n",
     "        #checkpoint.save(file_prefix = checkpoint_prefix)\n",
-    "        enc.save_weights(f'tf_vae/cartoon/training_weights/enc_{epoch+1}.h5')\n",
-    "        dec.save_weights(f'tf_vae/cartoon/training_weights/dec_{epoch+1}.h5')\n",
+    "        enc.save_weights(f'tf_vae/cartoon/training_weights/enc_{epoch+1}.weights.h5')\n",
+    "        dec.save_weights(f'tf_vae/cartoon/training_weights/dec_{epoch+1}.weights.   h5')\n",
     "        print ('Time for epoch {} is {} sec'.format(epoch + 1, time.time()-start))\n",
     "\n",
     "        # Generate after the final epoch\n",
@@ -1059,7 +1061,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Projeto-Final-Topicos-IA",
    "language": "python",
    "name": "python3"
   },
