--- a/VAE_Cartoon_Refatorado.ipynb
+++ b/VAE_Cartoon_Refatorado.ipynb
@@ -487,8 +487,8 @@
     "        loss = tf.reduce_mean(loss_vec) \n",
     "    gradients_of_enc = encoder.gradient(loss, enc.trainable_variables)\n",
     "    gradients_of_dec = decoder.gradient(loss, dec.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(gradients_of_enc, enc.trainable_variables))\n",
-    "    optimizer.apply_gradients(zip(gradients_of_dec, dec.trainable_variables))\n",
+    "    encoder_optimizer.apply_gradients(zip(gradients_of_enc, enc.trainable_variables))\n",
+    "    decoder_optimizer.apply_gradients(zip(gradients_of_dec, dec.trainable_variables))\n",
     "    return loss"
    ]
   },
